# chroma_gui

./: .buildinfo  .gitlab-ci.yml  CHANGELOG.md  README.md  bibliography.doctree  bibliography.html  chroma_gui.ui  environment.pickle  genindex.html  index.doctree  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: coverage.yml  cron.yml  tests.yml
_modules/: index.html
_modules/chroma_gui/: main.html
_modules/chroma_gui/cleaning/: clean.html  (+1 more)
_sources/modules/: chromaticity.rst.txt  corrections.rst.txt  plotting.rst.txt
chroma_gui/: __init__.py  __main__.py  chroma_gui.ui  constants.py  main.py
chroma_gui/chromaticity/: __init__.py  chroma_fct.py
chroma_gui/cleaning/: __init__.py  clean.py  constants.py  plateau.py
chroma_gui/corrections/: __init__.py  correct.py  response_matrix.py
chroma_gui/plotting/: __init__.py  functions.py  widget.py
chroma_gui/resources/: response_matrices.json
chroma_gui/timber/: __init__.py  constants.py  extract.py
chroma_gui/ui_components/: chroma_gui.ui
cleaning/: __init__.py  clean.py  constants.py
doc/: Makefile  bibliography.rst  conf.py  index.rst
doc/main/: chroma_gui.rst
doc/modules/: cleaning.rst  timber.rst
main/: chroma_gui.doctree  chroma_gui.html
modules/: chromaticity.doctree  chromaticity.html  cleaning.doctree  cleaning.html  corrections.doctree  corrections.html  plotting.doctree  plotting.html  timber.doctree  timber.html
plotting/: __init__.py  functions.py  widget.py
tests/: test_chroma_gui.py
(+24 files in other folders)
