[metadata]
name = chroma-gui
version = attr: chroma_gui.__version__
author = "Maël le Garrec"
author_email = "mael.le.garrec@cern.ch"
url = "https://gitlab.cern.ch/mlegarre/nl-chroma-gui"
description = "Non-Linear Chromaticity GUI"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
zip_safe = True
include_package_data = True
packages = find:

install_requires =
    matplotlib
    tfs-pandas
    pytimber
    pyqt5 >= 5.14  # for Qt.MarkdownText
    pandas
    numpy
    scipy
    tabulate
    pyperclip
    qtawesome
    nafflib
    tables

[options.entry_points]
console_scripts = 
    chroma-gui = chroma_gui.main:main

[options.extras_require]
test =
  pytest

doc =
  sphinx
  acc-py-sphinx

[options.package_data]
* = resources/**/*, resources/*
